--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ categories = ["development-tools", "rust-patterns"]
 keywords = ["proc_macro", "sealed", "future-proofing"]
 readme = "README.md"
 edition = "2018"
+exclude = [
+    "demo/*",
+    "images/*"
+]
 
 [lib]
 proc-macro = true
