--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -3,8 +3,7 @@ name = "demo"
 version = "0.1.0"
 authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [dependencies]
-sealed = "0.1"
+sealed = { path = ".." }
