--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --workplace
+          args: --workspace
 
   clippy:
     runs-on: ubuntu-latest
@@ -38,4 +38,4 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --workplace
+          args: --workspace
