fixup! Add rustfmt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,5 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
+      - name: Format tests
+        run: rustfmt --check tests/**/*.rs
