--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ syn = { version = "1.0", features = ["extra-traits"] }
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+heck = "0.3"
