--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["proc_macro", "sealed", "future-proofing"]
 readme = "README.md"
 edition = "2018"
 exclude = ["images/*"]
-resolver = "2"
+rust = "1.50.0"
 
 [workspace]
 members = ["demo"]
