Revert "update CI"
This reverts commit 3727f840f6a1639b9cb353a61c78b64a786a1fb0.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["proc_macro", "sealed", "future-proofing"]
 readme = "README.md"
 edition = "2018"
 exclude = ["images/*"]
+rust = "1.50.0"
 
 [workspace]
 members = ["demo"]
