--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -2,6 +2,7 @@
 name = "demo"
 version = "0.1.0"
 authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
+edition = "2021"
 publish = false
 
 [dependencies]
